feat(data-bind):new component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header></app-header>
-<app-home></app-home>
+<!-- <app-home></app-home> -->
+<app-exercicio-data-binding></app-exercicio-data-binding>
 <app-footer></app-footer>
