git(prop bind): add new properties bind

--- a/src/app/exercicio-data-binding/exercicio-data-binding.component.html
+++ b/src/app/exercicio-data-binding/exercicio-data-binding.component.html
@@ -1,1 +1,7 @@
 <p>exercicio-data-binding works!</p>
+
+<img [src]="imgURL" [width]="imgWidth">
+<button [disabled]="btnDisabled">Botão</button>
+<p [attr.aria-label]="TextoAlternativo">
+    Um texto qualquer...
+</p>
