--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-header [title]="title"></app-header>
 <!-- <app-home></app-home> -->
-<app-exercicio-data-binding></app-exercicio-data-binding>
+<app-exercicio-data-binding (outInfo)="getEvent($event)"></app-exercicio-data-binding>
 <app-footer></app-footer>
