feat(contador): two way data bind

--- a/src/app/contador/contador.component.html
+++ b/src/app/contador/contador.component.html
@@ -1,4 +1,4 @@
 <p>contador works!</p>
-{{valor}}
+{{valor}} {{twowdb}}
 <button (click)="increment()">Incrementar</button>
 <button (click)="decrement()">Decrementar</button>
