feat(diretiva):new component

--- a/src/app/exercicio-data-binding/exercicio-data-binding.component.html
+++ b/src/app/exercicio-data-binding/exercicio-data-binding.component.html
@@ -13,7 +13,7 @@
 <Button (click)="onSave($event)">Salvar</Button>
 {{count}} {{twowdb2}}
 
-<!-- Exercpicio data bind -->
+<!-- Exercício data bind -->
 <app-contador [valor]="count" (outCount)="outcount($event)" [(twowdb)]="twowdb2"></app-contador>
 
 <!-- Ng Model -->
