--- a/src/app/diretivas/diretivas.component.html
+++ b/src/app/diretivas/diretivas.component.html
@@ -1,6 +1,6 @@
-<button (click)="trocarValor()">trocar valor</button>
+<!-- <button (click)="trocarValor()">trocar valor</button> -->
 <!-- ngIf -->
-{{deveExibir}}
+<!-- {{deveExibir}}
 <p *ngIf="deveExibir; else blocoElse"> 
     Meu Texto
 </p>
@@ -14,27 +14,27 @@
 </p>
 <p *ngIf="(7+5)>7"> 
     Meu Texto d
-</p>
-
+</p> -->
+<!-- 
 <div *ngIf="deveExibir; then b1;else b2"></div>
 <ng-template #b1>
     <p>Bloco1</p>
 </ng-template>
 <ng-template #b2>
     <p>Bloco1</p>
-</ng-template>
+</ng-template> -->
 
 <!-- ngFor -->
-<button (click)="addItem('bs')">Add item</button>
+<!-- <button (click)="addItem('bs')">Add item</button>
 
 <ul>
     <li *ngFor="let item of lista; let index = index; let count = count; let last = last;let f = first">
         {{index}} - {{item}} - {{count}} - {{last? 'esse é o ultimo':
                                              f?'esse é o primeiro':'meio do caminho'}}
     </li>
-</ul>
+</ul> -->
 <!-- exercicio -->
-
+<!-- 
 <ul>
     <li *ngFor="let categoria of MEMES_AGRUPADOS_POR_CATEGORIA">
         <h1>{{categoria.categoria}}</h1>
@@ -49,4 +49,9 @@
             </li>
         </ul>
     </li>
-</ul>
+</ul> -->
+
+<!-- NG CLASS -->
+<h1 [ngClass]="classeCss" [ngClass]="getClass(101)">Meu texto</h1>
+<button (click)="setGreen()">Verde</button>
+<button (click)="setRed()">Vermelho</button>
