feat(pipe) new Pipes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header [title]="title"></app-header>
 <!-- <app-home></app-home> -->
 <!-- <app-exercicio-data-binding (outInfo)="getEvent($event)"></app-exercicio-data-binding> -->
-<app-diretivas></app-diretivas>
+<!-- <app-diretivas></app-diretivas> -->
+<app-pipes></app-pipes>
 <app-footer></app-footer>
